adjusts font size color and family

--- a/index.html
+++ b/index.html
@@ -27,12 +27,21 @@
       body {
         background-color: #181411;
         color: #ffd500;
+        font-size: 0.75cm;
+        font-family: monospace;
       }
 
       body {
         display: flex;
         flex-direction: column;
+        align-items: center;
         padding: 1.5cm;
+      }
+
+      a {
+        color: #ffd500;
+        text-decoration: none;
+        font-size: 0.75cm;
       }
     </style>
   </head>
